--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn {
+    @apply bg-[#e5e7e9]
+    rounded-md text-sm
+    text-gray-800 hover:ring-1
+    hover:ring-gray-200
+    focus:outline-none
+    active:ring-gray-100
+    hover:shadow-md w-36 h-10 
+    transition-shadow;
+  }
+}
